# bytestring-readfile-example

./: LICENSE  bytestring-readfile-example.cabal  stack.yaml
source/: Main.hs
