name:                bytestring-readfile-example
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Jonathan Knowles
maintainer:          mail@jonathanknowles.net
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

executable bytestring-readfile-example
    main-is:             Main.hs
    build-depends:       base       >= 4.8      && < 4.9,
                         bytestring >= 0.10.6.0 && < 1.0
    hs-source-dirs:      source
    default-language:    Haskell2010

